# bazel_example

./: .gitignore  LICENSE  README.md
cpf/: BUILD  MODULE.bazel  cpf.bzl  cpf_extension.bzl  example.pycpp  main_generator.py  requirements.in  requirements_lock.txt
example/: BUILD  MODULE.bazel  cpf.bzl
